--- a/rizuge/html/login.html
+++ b/rizuge/html/login.html
@@ -146,10 +146,7 @@
                     switch(ret.result){
                         case 3000:
                             //登录成功
-                            api.setPrefs({
-                                key: 'access_token',
-                                value: ret.reason
-                            });
+                            $api.setStorage('access_token',ret.reason);
                             api.toast(
                                 {
                                     msg: "登陆成功",
@@ -158,6 +155,12 @@
                                     global: true
                                 }
                             );
+                            api.sendEvent({
+                                name: 'haslogin',
+                                extra: {
+                                    access_token: ret.reason
+                                }
+                            });
 
                             api.closeFrame({
                                 name: 'login'
