--- a/rizuge/html/more.html
+++ b/rizuge/html/more.html
@@ -9,6 +9,7 @@
     <!--<link rel="stylesheet" type="text/css" href="../css/style.css" />-->
     <link rel="stylesheet" href="../css/aui.css">
     <link rel="stylesheet" href="../css/aui-skin.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         header{
             padding-top: 20px;
@@ -17,7 +18,6 @@
     </style>
 </head>
 <body>
-<header class="aui-bar aui-bar-nav">更多</header>
 <div>
     <ul class="aui-list aui-media-list" id="list">
         <li class="aui-list-item aui-list-item-middle" id="userbox" tapmode>
@@ -86,6 +86,8 @@
                             $api.text($api.dom('#status'),"尚未实名认证");
                             break;
                         case "4001":
+                            alert("登录信息已过期，请重新登陆");d
+                            $api.rmStorage('access_token');
                             //需要重新登录
                             break;
                         default:
@@ -99,7 +101,7 @@
         el = document.getElementById('userbox');
         $api.addEvt(el, 'click', function(){
             if(access_token === undefined){
-                api.openFrame({
+                api.openWin({
                     name: 'login',
                     url: './login.html',
                     rect: {
@@ -113,6 +115,12 @@
                     scrollEnabled: false
                 });
             }else{
+                api.openWin({
+                    name: 'setinfo',
+                    url: './setinfo.html',
+                    pageParam: {name: 'pageparam'},
+                    bounces: false
+                });
             }
         },false);
         api.addEventListener({
@@ -162,6 +170,8 @@
                             break;
                         case "4001":
                             //需要重新登录
+                            alert("登录信息已过期，请重新登陆");
+                            $api.rmStorage('access_token');
                             break;
                         default:
                             alert(ret.reason)
