--- a/rizuge/index.html
+++ b/rizuge/index.html
@@ -67,7 +67,7 @@
             <div id="more" class="aui-bar aui-bar-nav aui-bar-light aui-hide">
                 <div class="aui-title">更多</div>
             </div>
-            <div id="contact" class="aui-bar aui-bar-nav aui-bar-light aui-hide">
+            <div id="cantact" class="aui-bar aui-bar-nav aui-bar-light aui-hide">
                 <div class="aui-title">消息</div>
             </div>
         </header>
@@ -218,7 +218,7 @@
                                 $api.addCls(header[i], 'aui-hide');
                             }
                         }
-                        $api.removeCls($api.dom('#contact'),'aui-hide');
+                        $api.removeCls($api.dom('#cantact'),'aui-hide');
                         api.setFrameGroupIndex({
                             name: 'home',
                             index: 1,
@@ -265,7 +265,7 @@
                 url: './html/fanglist.html',
                 bgColor: '#eee'
             }, {
-                name: 'contentlist',
+                name: 'contactlist',
                 url: './html/contactlist.html',
                 bgColor: '#eee'
             }, {
