fix android bmap bug

--- a/rizuge/index.html
+++ b/rizuge/index.html
@@ -285,6 +285,8 @@
                     return;
                 }
             });
+        }else{
+            getLocation()
         }
         function getLocation() {
             map.getLocation({
