fix android bmap bug

--- a/rizuge/html/fanglist.html
+++ b/rizuge/html/fanglist.html
@@ -36,7 +36,7 @@
             latitude: ''
         };
         api.addEventListener({
-            name: 'getLocation'
+            name: 'getlocation'
         },function(ret,err){
             location_param = ret;
             api.refreshHeaderLoading();
